--- a/Front-End/angular.json
+++ b/Front-End/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "Front-End": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Front-End"
+    }
+  },
+  "defaultProject": "Front-End",
+  "cli": {
+    "analytics": false
+  }
 }
